# geotiff-rust

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docker/: reference.Dockerfile
docs/: benchmark-report.md  publishing.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: geotiff_open.rs  tiff_open.rs
geotiff-core/: Cargo.toml
geotiff-core/src/: crs.rs  geokeys.rs  lib.rs  metadata.rs  tags.rs  transform.rs
geotiff-reader/: Cargo.toml
geotiff-reader/benches/: reference_compare_bench.rs
geotiff-reader/src/: cog.rs  crs.rs  error.rs  geokeys.rs  lib.rs  transform.rs
geotiff-reader/tests/: interoperability.rs  reference_benchmark.rs  reference_parity.rs
geotiff-writer/: Cargo.toml
geotiff-writer/benches/: reference_compare_bench.rs
geotiff-writer/src/: builder.rs  cog.rs  error.rs  lib.rs  sample.rs  tile_writer.rs
geotiff-writer/tests/: reference_parity.rs
integration-tests/geotiff-integration/: Cargo.toml
integration-tests/geotiff-integration/benches/: geotiff_reader_reference_compare_bench.rs  reference_compare_bench.rs
integration-tests/geotiff-integration/tests/: cog_roundtrip.rs  geotiff_reader_reference_parity.rs  geotiff_writer_reference_parity.rs  geotiff_writer_roundtrip.rs
integration-tests/tiff-integration/: Cargo.toml
integration-tests/tiff-integration/benches/: reference_compare_bench.rs
integration-tests/tiff-integration/tests/: reference_parity.rs  tiff_writer_roundtrip.rs
scripts/: fetch-interoperability-corpus.sh  reference_gdal.py  run-reference-tests-in-docker.sh  seed-fuzz-corpus.sh
test-support/: reference.rs
testdata/interoperability/: README.md  manifest.tsv
tiff-core/: Cargo.toml
tiff-core/src/: byte_order.rs  constants.rs  layout.rs  lib.rs  sample.rs  tag.rs
tiff-reader/: Cargo.toml
tiff-reader/benches/: reference_compare_bench.rs
tiff-reader/src/: block_decode.rs  cache.rs  error.rs  filters.rs  header.rs  ifd.rs  io.rs  lib.rs  pixel.rs  source.rs  strip.rs  tag.rs  tile.rs
tiff-reader/tests/: interoperability.rs  reference_benchmark.rs  reference_parity.rs
tiff-writer/: Cargo.toml
tiff-writer/src/: builder.rs  compress.rs  encoder.rs  error.rs  lib.rs  sample.rs  writer.rs
