[workspace]
members = ["tiff-core", "tiff-reader", "tiff-writer", "geotiff-core", "geotiff-reader", "geotiff-writer"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/geotiff-rust"
homepage = "https://github.com/roteiro-gis/geotiff-rust"

[workspace.dependencies]
ndarray = "0.17"
thiserror = "2"
memmap2 = "0.9"
