[workspace]
members = [
    "tiff-core",
    "tiff-reader",
    "tiff-writer",
    "geotiff-core",
    "geotiff-reader",
    "geotiff-writer",
    "integration-tests/tiff-integration",
    "integration-tests/geotiff-integration",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/geotiff-rust"
homepage = "https://github.com/roteiro-gis/geotiff-rust"

[workspace.dependencies]
ndarray = "0.17"
thiserror = "2"
memmap2 = "0.9"
lerc-core = "0.3"
lerc-reader = "0.3"
lerc-writer = "0.3"
