[package]
name = "geotiff-core"
description = "Shared GeoTIFF types: GeoKey directory, CRS, affine transforms, and tag constants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/geotiff-core"
keywords = ["geotiff", "gis", "crs", "raster", "metadata"]
categories = ["science", "data-structures"]

[dependencies]
