[package]
name = "geotiff-reader"
description = "Pure-Rust GeoTIFF reader with optional HTTP range-backed remote access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/geotiff-reader"
keywords = ["geotiff", "cog", "raster", "gis", "read-only"]
categories = ["science", "parser-implementations"]

[dependencies]
geotiff-core = { version = "0.2.2", path = "../geotiff-core" }
ndarray = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
tiff-reader = { version = "0.2", path = "../tiff-reader", optional = true }
rayon = { version = "1", optional = true }
lru = "0.16.3"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
serde_json = "1"
tiff-core = { version = "0.2.2", path = "../tiff-core" }
tiff-writer = { version = "0.2", path = "../tiff-writer" }

[[bench]]
name = "reference_compare_bench"
harness = false

[features]
default = ["local", "rayon"]
local = ["dep:tiff-reader"]
rayon = ["dep:rayon", "local", "tiff-reader/rayon"]
cog = ["dep:reqwest", "local"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "rustls-tls"]
optional = true
