[package]
name = "geotiff-writer"
description = "Pure-Rust GeoTIFF and COG writer with compression, tiling, and overview support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
geotiff-core = { version = "0.2.4", path = "../geotiff-core" }
tiff-writer = { version = "0.2.4", path = "../tiff-writer" }
tiff-core = { version = "0.2.4", path = "../tiff-core" }
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tiff-reader = { version = "0.2", path = "../tiff-reader" }
geotiff-reader = { version = "0.2", path = "../geotiff-reader" }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "reference_compare_bench"
harness = false
