[package]
name = "tiff-writer"
description = "Pure-Rust TIFF/BigTIFF encoder with compression, tiling, and streaming writes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/tiff-writer"
keywords = ["tiff", "bigtiff", "encoder", "raster", "gis"]
categories = ["science", "encoding"]

[dependencies]
tiff-core = { version = "0.4.0", path = "../tiff-core" }
lerc-core = { workspace = true }
lerc-writer = { workspace = true }
thiserror = { workspace = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
weezl = "0.1"

[features]
default = ["jpeg", "zstd"]
jpeg = ["dep:jpeg-encoder"]
zstd = ["dep:zstd"]

[dependencies.jpeg-encoder]
version = "0.6"
optional = true

[dependencies.zstd]
version = "0.13"
default-features = false
optional = true
