[package]
name = "tiff-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tiff-core = { version = "0.4.0", path = "../../tiff-core" }
tiff-reader = { version = "0.4.0", path = "../../tiff-reader" }
tiff-writer = { version = "0.4.0", path = "../../tiff-writer" }
ndarray = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
serde_json = "1"

[[bench]]
name = "reference_compare_bench"
harness = false
